# deep-rl-portfolio-optimization

./: .gitignore  Makefile  README.md  phase_2.md  pyproject.toml
configs/: data.yaml  env.yaml  env_low_action_temperature.yaml  evaluation.yaml  features.yaml  train_ppo.yaml  train_ppo_no_entropy.yaml  train_ppo_wandb.yaml  universe.yaml
configs/experiments/: ppo_phase3_default.yaml  ppo_phase3_seed_sweep.yaml  ppo_phase3_temperature_sweep.yaml
docs/: README.md  technical_overview.md
docs/planning/: phase_1.md  phase_2.md  phase_3.md
notebooks/: phase1_data_review.ipynb
scripts/: build_features.py  compare_validation.py  diagnose_ppo_run.py  evaluate_policy.py  list_experiments.py  run_baselines.py  run_etl.py  smoke_test_env.py  train_ppo.py  validate_phase1.py
src/portfolio_rl/: __init__.py
src/portfolio_rl/config/: __init__.py  loader.py  schemas.py
src/portfolio_rl/data/: __init__.py  dataset.py  etl.py  feature_store.py  fred_client.py  splits.py  storage.py  (+2 more)
tests/integration/: test_build_features_pipeline.py  test_diagnose_ppo_run.py  test_dummy_agent_env.py  test_etl_pipeline.py  test_evaluate_policy.py  test_run_baselines.py  test_sb3_policy_backtest.py  test_train_ppo_smoke.py
tests/unit/: test_backtest.py  test_baseline_policies.py  test_config_loader.py  test_data_validation.py  test_env_action.py  test_env_costs.py  test_env_drift.py  test_env_reward.py  test_episode_sampler.py  test_feature_builder.py  test_feature_spec.py  test_fred_client.py  test_metrics.py  test_model_matrix.py  test_normalization.py  test_phase2_data_interface.py  test_portfolio_env.py  test_registry.py  test_reports.py  test_sb3_policy.py  test_splits.py  test_storage.py  test_train_ppo_config.py  test_training_callbacks.py  test_validate_phase1.py  test_yfinance_client.py
(+29 files in other folders)
