[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-rl-portfolio-optimization"
version = "0.1.0"
description = "Deep reinforcement learning for dynamic portfolio optimization."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
