[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-rl-portfolio-optimization"
version = "0.1.0"
description = "Deep reinforcement learning for dynamic portfolio optimization."
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "requests>=2.31",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
